--- a/KrestikNolik/.project
+++ b/KrestikNolik/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Chat</name>
+	<name>KrestikNolik</name>
 	<comment></comment>
 	<projects>
 	</projects>
